--- a/web/themes/custom/atrium/src/sass/components/webform/_jcc-feedback.scss
+++ b/web/themes/custom/atrium/src/sass/components/webform/_jcc-feedback.scss
@@ -45,12 +45,14 @@
     display: block;
     height: 0;
     left: auto;
+    overflow: hidden;
     padding: 0;
     position: relative;
     visibility: hidden;
 
     &[open] {
       height: auto;
+      overflow: visible;
       visibility: visible;
     }
 
